# opencomp_studio

./: .gitignore  AGENTS.md  LAL_105_523_0010_slapcomp_test.opencomp  README.md  install.bat  install.sh  run.bat  run.sh
backend/: OpenComp Studio Session.nk  OpenComp Studio Session.opencomp  pyproject.toml
backend/opencomp/: app.py  cli.py
backend/opencomp/api/: app_state.py  context.py  node_routes.py  project_routes.py  routes.py  (+5 more)
backend/scripts/: benchmark_backend_matrix.py  benchmark_ocio_variants.py  benchmark_oiio_ocio_conversion.py  benchmark_viewer_pipeline.py  benchmark_viewer_profiles.py  build_vulkan_shaders.py  profile_ocio_display.py
backend/tests/: conftest.py  test_api_context.py  test_app_state.py  test_cache_invalidation.py  test_composite_nodes.py  test_cryptomatte.py  test_defaults.py  test_expressions.py  test_exr_channel_metadata.py  test_grade_node.py  test_graph_cycle.py  test_health.py  test_image_io_paths.py  test_models.py  test_node_routes.py  test_oiio_backend.py  test_optional_dependencies.py  test_path_utils.py  test_preview.py  test_project_io_and_cli.py  test_python_scripting.py  test_read_node.py  test_read_source_cache.py  test_render_contract.py  test_script_tabs.py  test_setup_opencomp.py  test_slapcomp.py  test_smart_read_channels.py  test_time_color_nodes.py  test_viewer_context.py  test_viewer_endpoint.py  test_viewer_float.py  test_viewer_float_stream.py  test_viewer_inputs.py  test_viewer_requests.py  test_viewer_scene_linear.py  test_viewer_streaming.py  test_viewer_transport.py  test_vulkan_backend.py  test_vulkan_toolchain.py
(+101 files in other folders)
